fix spacing problem between added questions

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -333,19 +333,27 @@ body{
   border: 2px solid pink;
   height: 40px;
   width: 100%;
+  margin-bottom: 20px;
 }
 
 .question-text {
-  border: 1px dashed orange;
-  display: inline-block;
-  position: relative;
-  margin-left: 30px;
+  border: 1px dashed purple;
   width: 50%;
+  height: 100%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  margin-left: 30px;
+  float: left;
+  font-size: 20px;
 }
 
 .set-resp-type-btn {
   border: 2px solid green;
-  display: inline-block;
-  margin-left: 50px;
-  margin-bottom: 2px;
-}
+  float: left;
+  display: block;
+  margin-left: 100px;
+  margin-top: 0px;
+  }
+
